add gap to the card

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="button-section">
                     <button type="submit" id="create" class="btn btn-create">Créer</button>
-                    <button type="reset" class="btn btn-reint">Rénit</button>
+                    <button type="reset" id="resetBtn" class="btn btn-reint">Rénit</button>
                 </div>
             </form>
         </div>
